log
Wed 08 May 2024 08:04:25 PM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|8
total_score: 0/70
8bc1bdc
Wed 08 May 2024 08:04:54 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|8
total_score: 0/70
1670628
Wed 08 May 2024 08:16:07 PM UTC: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
33f95b1
Thu 09 May 2024 09:16:43 PM UTC: 
 treemap.c | 51 ++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 50 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
239eda7
Thu 09 May 2024 09:17:37 PM UTC: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  8|5
total_score: 15/70
337ceb6
Thu 09 May 2024 09:19:55 PM UTC: 
 treemap.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
 tests:  8|5
total_score: 15/70
6a1f6a8
Thu 09 May 2024 09:22:59 PM UTC: 
 treemap.c | 45 +++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 45 insertions(+)
 tests:  8|5
total_score: 15/70
cefaa08
Thu 09 May 2024 09:24:06 PM UTC: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  8|5
total_score: 15/70
d4e0b37
Thu 09 May 2024 09:55:10 PM UTC: 
 treemap.c | 46 ----------------------------------------------
 1 file changed, 46 deletions(-)
 tests:  8|5
total_score: 15/70
30f4d56
Thu 09 May 2024 09:58:14 PM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  8|5
total_score: 15/70
42006cd
Thu 09 May 2024 11:31:51 PM UTC: 
 treemap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  10|4
total_score: 20/70
95041c9
Thu 09 May 2024 11:33:13 PM UTC: 
 treemap.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
 tests:  0|0
53519c6
Thu 09 May 2024 11:33:57 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  12|4
total_score: 25/70
17f214c
Thu 09 May 2024 11:35:14 PM UTC: 
 treemap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:204:1: error: control reaches end of non-void function [-Werror=return-type]
  204 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a62d68b
Thu 09 May 2024 11:36:00 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:204:1: error: control reaches end of non-void function [-Werror=return-type]
  204 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8d3ae3e
Thu 09 May 2024 11:36:16 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  13|4
total_score: 25/70
6c1f6dd
Thu 09 May 2024 11:37:44 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
774ea75
Thu 09 May 2024 11:43:51 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  15|3
total_score: 35/70
930498a
Sat 11 May 2024 10:14:50 PM UTC: 
 treemap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:174:15: error: variable ‘ub_node’ set but not used [-Werror=unused-but-set-variable]
  174 |     TreeNode* ub_node = NULL;
      |               ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
38662ce
Sat 11 May 2024 10:17:21 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  19|2
total_score: 45/70
19ff7cd
Sat 11 May 2024 10:24:59 PM UTC: 
 treemap.c | 24 ++++++++++++++++++++++--
 1 file changed, 22 insertions(+), 2 deletions(-)
 tests:  0|0
8e646e0
Sat 11 May 2024 10:26:30 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6684ff7
Sat 11 May 2024 11:08:59 PM UTC: 
 treemap.c | 63 +++++++++++++++++++++++++++++++++++++++++++++++++++++----------
 1 file changed, 53 insertions(+), 10 deletions(-)
 tests:  29|0
total_score: 70/70
996eafb
